@@ -47,7 +47,7 @@ void f1(void)
 
 #endif
 
-// Get FreeBSD version to skip part of test for known broken setjmp (FreeBSD bug #255320).
+// Get FreeBSD version to skip part of test for known broken setjmp (FreeBSD bug #255320, affecting at least FreeBSD 13.0 and FreeBSD 13.1).
 #ifdef __FreeBSD__
 #include <sys/param.h>
 #endif
@@ -76,7 +76,7 @@ testJmp (void)
     }
   ASSERT (exception == 1);
   
-#if !defined(__FreeBSD__) || __FreeBSD_version > 1300139
+#if !defined(__FreeBSD__) || __FreeBSD_version > 1301000
   f1();
 #endif
 #endif
