@@ -1,3 +1,9 @@
+2022-05-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* support/regression/tests/setjmp.c,
+	  support/regression/tests/loop.c.in:
+	  Disable two tests for FreeBSD 13.1, since a known issue from FreeBSD 13.0 is still present.
+
 2022-05-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* Merge regtest branch.
